Add hidden Netlify form template for audit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rocket Growth Agency</title>
-    <meta name="description" content="Performance advertising that books real appointments." />
-    <link rel="icon" href="/favicon.ico">
+
+    <!-- You can add GTM/GA4/Meta/CallRail snippets here later -->
   </head>
-  <body class="antialiased">
+  <body class="bg-white">
+    <!-- Hidden Netlify form template so Netlify can detect the form at build time -->
+    <form name="audit" method="POST" data-netlify="true" netlify hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="url" />
+    </form>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
