SEO: add canonical + og:url pointing to https://www.rocketgrowthagency.com/

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
     />
     <link rel="icon" href="/favicon.ico" />
-  </head>
+    <link rel="canonical" href="https://www.rocketgrowthagency.com/"/>
+  <meta property="og:url" content="https://www.rocketgrowthagency.com/"/>
+</head>
   <body>
     <div id="root"></div>
 
