--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <meta property="og:url" content="https://www.rocketgrowthagency.com/"/>
 </head>
   <body>
+<!-- Netlify form stub for detection (keeps inline success UX) -->
+<form name="audit" netlify netlify-honeypot="bot-field" hidden>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <input type="text" name="url" />
+  <input type="text" name="subject" />
+  <p class="hidden"><label>Don’t fill this out: <input name="bot-field"/></label></p>
+</form>
     <div id="root"></div>
 
     <!-- Netlify shadow form for build-time detection -->
