--- a/index.html
+++ b/index.html
@@ -8,19 +8,69 @@
       name="description"
       content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
     />
+    <meta name="theme-color" content="#2563eb" />
     <link rel="icon" href="/favicon.ico" />
-    <link rel="canonical" href="https://www.rocketgrowthagency.com/"/>
-  <meta property="og:url" content="https://www.rocketgrowthagency.com/"/>
-</head>
+    <link rel="canonical" href="https://www.rocketgrowthagency.com/" />
+    <meta property="og:url" content="https://www.rocketgrowthagency.com/" />
+    <meta property="og:title" content="Rocket Growth Agency" />
+    <meta
+      property="og:description"
+      content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Rocket Growth Agency" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="https://www.rocketgrowthagency.com/favicon.ico" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rocket Growth Agency" />
+    <meta
+      name="twitter:description"
+      content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
+    />
+    <meta name="twitter:image" content="https://www.rocketgrowthagency.com/favicon.ico" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://www.rocketgrowthagency.com/#organization",
+            "name": "Rocket Growth Agency",
+            "url": "https://www.rocketgrowthagency.com/",
+            "logo": "https://www.rocketgrowthagency.com/favicon.ico",
+            "contactPoint": [
+              {
+                "@type": "ContactPoint",
+                "contactType": "sales",
+                "email": "hello@rocketgrowthagency.com"
+              }
+            ]
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://www.rocketgrowthagency.com/#website",
+            "url": "https://www.rocketgrowthagency.com/",
+            "name": "Rocket Growth Agency",
+            "publisher": {
+              "@id": "https://www.rocketgrowthagency.com/#organization"
+            }
+          }
+        ]
+      }
+    </script>
+  </head>
   <body>
-<!-- Netlify form stub for detection (keeps inline success UX) -->
-<form name="audit" netlify netlify-honeypot="bot-field" hidden>
-  <input type="text" name="name" />
-  <input type="email" name="email" />
-  <input type="text" name="url" />
-  <input type="text" name="subject" />
-  <p class="hidden"><label>Don’t fill this out: <input name="bot-field"/></label></p>
-</form>
+    <!-- Netlify form stub for detection (keeps inline success UX) -->
+    <form name="audit" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="url" />
+      <input type="text" name="subject" />
+      <p class="hidden">
+        <label>Don’t fill this out: <input name="bot-field" /></label>
+      </p>
+    </form>
     <div id="root"></div>
 
     <!-- Netlify shadow form for build-time detection -->
