Add GA4 tag and finalize meta/JSON-LD

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
     />
     <meta name="twitter:image" content="https://www.rocketgrowthagency.com/favicon.ico" />
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HE00MZ971F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+      gtag('config', 'G-HE00MZ971F');
+    </script>
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
