--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
     />
     <meta name="theme-color" content="#2563eb" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="canonical" href="https://www.rocketgrowthagency.com/" />
     <meta property="og:url" content="https://www.rocketgrowthagency.com/" />
     <meta property="og:title" content="Rocket Growth Agency" />
@@ -20,14 +20,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Rocket Growth Agency" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://www.rocketgrowthagency.com/favicon.ico" />
+    <meta property="og:image" content="https://www.rocketgrowthagency.com/favicon.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Rocket Growth Agency" />
     <meta
       name="twitter:description"
       content="Performance marketing for local service brands—profitable ads, conversion-focused pages, and real analytics."
     />
-    <meta name="twitter:image" content="https://www.rocketgrowthagency.com/favicon.ico" />
+    <meta name="twitter:image" content="https://www.rocketgrowthagency.com/favicon.png" />
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HE00MZ971F"></script>
     <script>
@@ -48,7 +48,7 @@
             "@id": "https://www.rocketgrowthagency.com/#organization",
             "name": "Rocket Growth Agency",
             "url": "https://www.rocketgrowthagency.com/",
-            "logo": "https://www.rocketgrowthagency.com/favicon.ico",
+            "logo": "https://www.rocketgrowthagency.com/favicon.png",
             "contactPoint": [
               {
                 "@type": "ContactPoint",
